# most-queue

./: .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  README.ru.md  deploy.txt  n_3_ro_0.7.json  proj.gitignore  pyproject.toml  requirements.txt  setup.py  ~$исание.docx  Описание.docx
.cursor/rules/: pytest-quality.mdc  python-quality.mdc
.github/workflows/: tests.yml
docs/: DOD.md  INFRASTRUCTURE.md  PROJECT.md  README.md  README.ru.md  calculation.md  calculation.ru.md  concepts.md  concepts.ru.md  custom_simulators.md  custom_simulators.ru.md  distributions.md  distributions.ru.md  examples.md  examples.ru.md  getting_started.md  getting_started.ru.md  models.md  models.ru.md  models_gap_analysis.md  negative_disasters_time_characteristics.md  negative_disasters_time_characteristics.ru.md  negative_networks_calculation.md  negative_networks_calculation.ru.md  negative_rcs_time_characteristics.md  negative_rcs_time_characteristics.ru.md  networks.md  networks.ru.md  priorities.md  priorities.ru.md  simulation.md  simulation.ru.md  srpt_spjf_methods.md  srpt_spjf_methods.ru.md  tesaurus.md  tesaurus.ru.md
docs/epics/: EPIC-001-queueing-models-gap-analysis.md  EPIC-002-wave1-exact-models.md  EPIC-003-qbd-map-ph.md  EPIC-004-retrial-erlang-a.md  EPIC-005-illustrated-catalog.md  EPIC-006-english-docs.md  EPIC-007-map-phase2.md  EPIC-008-map-phase3.md  EPIC-009-rdr-priority.md  EPIC-010-age-of-information.md  EPIC-011-multiserver-job.md  EPIC-012-bulk-service.md  EPIC-013-predictions-scheduling.md  EPIC-014-load-balancing.md  EPIC-015-polling.md  EPIC-016-time-varying.md  EPIC-017-networks-exact-methods.md  EPIC-018-networks-wave2.md  EPIC-019-unreliable-servers.md  EPIC-020-priority-wave2.md  README.md
docs/figures/: generate_figures.py
docs/models/: aoi.md  aoi.ru.md  batch.md  batch.ru.md  closed.md  closed.ru.md  fifo.md  fifo.ru.md  fork-join.md  fork-join.ru.md  impatience.md  impatience.ru.md  load-balancing.md  load-balancing.ru.md  map-ph.md  map-ph.ru.md  msj.md  msj.ru.md  negative.md  negative.ru.md  networks.md  networks.ru.md  polling.md  polling.ru.md  priority.md  priority.ru.md  reliability.md  reliability.ru.md  retrial.md  retrial.ru.md  time-varying.md  time-varying.ru.md  vacations.md  vacations.ru.md
docs/research/: priority-queues-2026.md  queueing-networks-2026.md  queueing-trends-2026.md  unreliable-queues-2026.md
docs/roadmaps/: qbd_map_ph_roadmap.md  retrial_erlang_a_roadmap.md  srpt_spjf_roadmap.md  wave1_exact_models_roadmap.md
docs/source/: conf.py  index.rst  modules.rst  most_queue.rst  most_queue.sim.rst  most_queue.theory.rst
doctest-output/: QS.gv
examples/: closed_network_example.py  custom_network_example.py  custom_simulator_example.py  srpt_table.py
most_queue/: __init__.py  compare_fj_calc.py  constants.py  distributions.py  flow_sum.py  n_3_ro_0.7.json  rand_distribution.py  structs.py  test_priority.py  test_qs.py  test_queue_types.py  weibull.py
most_queue.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
most_queue/distr_utils/: distribution_fitting.py
most_queue/examples/: compare_fj_calc.py  flow_sum.py  weibull.py
most_queue/general/: approx_cdf_make.py  conditional.py  conv.py  distribution_fitting.py  distribution_params.py  interfaces.py  plots.py  results_structs.py  tables.py  vacations_paper_utils.py
most_queue/general_utils/: approx_cdf_make.py  conv.py  tables.py  (+1 more)
sim/: fj_delta_im.py  fj_im.py  flow_sum_im.py  lambdas__trend_set.txt  lambdas_set.txt  lambdas_trend_set.txt  network_dyn_arrival.py  network_im_prty.py  rand_destribution.py  set_lamdas_dyn.py  smo_im.py  smo_im_prty.py  trend_real.txt
tests/: Dockerfile  cold_warm_delay_params.yaml  config.yaml  default_params.yaml  run.sh  test_accumulating_priority.py  test_aoi.py  test_base_qs_sim.py  test_batch.py  test_bcmp_network.py  test_bmap_m1.py  test_bmap_ph1.py  test_bulk_service.py  test_closed_network.py  test_conditionals.py  test_ek_d_n.py  test_engset.py  test_erlang.py  test_fj_delta.py  test_fj_im.py  test_fj_sim.py  test_fork_join_network.py  test_g_network.py  test_gi_g_approx.py  test_gi_m_1_calc.py  test_gi_m_n_calc.py  test_h2_h2_n_calc.py  test_h2_m_n_calc.py  test_impatience.py  test_jackson_network.py  test_load_balancing.py  test_m_d_n_calc.py  test_m_g_inf.py  test_m_h2_h2warm.py  test_m_ph_n_prty.py  test_m_ph_n_robustness.py  test_map_mmc.py  test_map_network.py  test_map_ph1.py  test_map_ph_priority.py  (+56 more)
theory/: approx_cdf_make.py  diff5dots.py  ek_d_n_calc.py  fj_calc.py  flow_sum.py  gi_m_n_calc.py  hyper_visor.py  m_d_n_calc.py  m_ph_n_prty.py  mg1_calc.py  mg1_warm_calc.py  mgn_tt.py  mmn3_pnz_cox_approx.py  mmn_prty_pnz_approx.py  mmnr_calc.py  network_calc.py  passage_time.py  prty_calc.py  q_poisson_arrival_calc.py  sv_sum_calc.py  weibull.py
tutorials/: 2_mgn_takahasi_takami.ipynb  3 priority queue.ipynb  README.md  README.ru.md  age_of_information.ipynb  closed_network_capacity.ipynb  conservation_law.ipynb  disciplines_comparison.ipynb  heavy_traffic.ipynb  inspection_paradox.ipynb  littles_law.ipynb  m_h2_h2warm.ipynb  map_ph_correlation.ipynb  mgn_takahasi_takami.ipynb  multiserver_jobs.ipynb  network_bottleneck.ipynb  network_with_priorities.ipynb  pasta.ipynb  poisson_illusion.ipynb  power_of_two_choices.ipynb  priority_queue.ipynb  queue_sim.ipynb  srpt_basics.ipynb  time_varying_load.ipynb  utilization_trap.ipynb  variability_matters.ipynb
visualisation/: smo_im_vis.py
(+543 files in other folders)
