[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "N", # pep8-naming
  "UP", # pyupgrade
  "YTT", # flake8-2020
  "S", # bandit
  "BLE", # flake8-blind-except
  "B", # flake8-bugbear
  "A", # flake8-builtins
  "C4", # flake8-comprehensions
  "T10", # flake8-debugger
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PT", # flake8-pytest-style
  "Q", # flake8-quotes
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "ARG", # flake8-unused-arguments
  "ERA", # eradicate
  "PGH", # pygrep-hooks
  "PLC", # pylint conventions
  "PLE", # pylint errors
  "PLR", # pylint refactor
  "PLW", # pylint warnings
  "RUF", # ruff-specific rules

]
ignore = [
  "E501", # Line too long (handled by black)
  "S101", # Use of assert
  "PLR0913", # Too many arguments to function call

]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.pylint.messages_control]
disable = [
  "invalid-name",
  "too-many-positional-arguments",
  "too-many-instance-attributes",
  "too-few-public-methods",
  "duplicate-code",
  "too-many-locals",
  "too-many-branches",
  "too-many-statements",
  "too-many-arguments",
  "too-many-lines",
  "import-error",
  "ungrouped-imports"
]

[tool.pylint.format]
max-line-length = 100


[project]
name = "most_queue"
version = "1.63"
authors = [{ name = "Xabarov Roman", email = "xabarov1985@gmail.com" }]
description = "Software package for calculation and simulation of queuing systems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "colorama",
  "matplotlib",
  "numpy",
  "pandas",
  "scipy==1.13.0",
  "tqdm",
  "graphviz",
  "networkx",
  "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/xabarov/most-queue"
