[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.messages_control]
disable = [
  "invalid-name",
  "too-many-instance-attributes",
  "too-few-public-methods",
  "duplicate-code",
  "too-many-locals",
  "too-many-branches",
  "too-many-statements",
  "fixme"
]

[tool.pylint.format]
max-line-length = 120


[project]
name = "most_queue"
version = "2.06"
authors = [{ name = "Xabarov Roman", email = "xabarov1985@gmail.com" }]
description = "Software package for calculation and simulation of queuing systems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "colorama",
  "matplotlib",
  "numpy",
  "pandas",
  "scipy>=1.13.0,<2.0",
  "tqdm",
  "graphviz",
  "networkx",
  "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/xabarov/most-queue"
